comment header text

--- a/pages/app.html
+++ b/pages/app.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="background-effect"></div>
-  <header><p>COS121 Project Group Five</p></header>
+  <!-- <header><p>COS121 Project Group Five</p></header> -->
 
   <nav>
     <div class="nav-inner" role="navigation" aria-label="Main">
