Made UI adjustments/corrections and fixed subject error

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
   <head></head>
   <body>
+    <button popovertarget="modal1">TOCH ME</button>
+    <div id="modal1" popover>
     <a href="pages/auth.html">
       Touch me
     </a>
+
+    <button popovertarget="modal1">Close</button>
+    </div>
   </body>
 </html>
