more UI updates to main app

--- a/pages/app.html
+++ b/pages/app.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Check Todo – Pro</title>
-  <link rel="icon" href="../images/logo.png" type="image/x-icon">
+  <title>Check Todo</title>
+  <link rel="icon" href="../images/web-icon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/app.css">
 </head>
@@ -18,11 +18,12 @@
       <div id="navLinks" class="nav-links">
         <a href="#" role="menuitem">Home</a>
         <a href="#" role="menuitem">Benefits</a>
+        <div class="user-info">
+          <div class="avatar-placeholder" id="userAvatar">U</div>
+          <button id="logoutBtn" class="logout-btn">Logout</button>
+        </div>
       </div>
-      <div class="user-info">
-        <div class="avatar-placeholder" id="userAvatar">U</div>
-        <button id="logoutBtn" class="logout-btn">Logout</button>
-      </div>
+
     </div>
   </nav>
 
