Updated UI for Index/Landing page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="spacer">
       <!-- Hamburger Icon -->
       <div class="hamburger" id="hamburger">
-        ☰
+        <!-- ☰ -->
       </div>
       <!-- CTA Button -->
       <a href="pages/auth.html" class="btn1 btn-outline1">Get Started Free</a>
@@ -37,17 +37,19 @@
 
   <!-- Hero -->
   <section id="hero" class="hero">
+    <br><br>
     <h1>Organize Your Day, The Smart Way</h1>
     <p>Check Todo List helps you plan, track, and crush your goals—without the clutter.</p>
     <div>
       <a href="pages/auth.html" class="btn btn-primary">Get Started Free</a>
       <a href="#demo" class="btn btn-outline">See How It Works</a>
     </div>
-    <img src="todo-mockup.png" alt="Todo App Mockup">
+    <img src="images/demo2.png" alt="Todo App Mockup">
   </section>
 
   <!-- Benefits -->
   <section id="benefits" class="benefits container">
+    <br><br>
     <h2>Why Choose Check Todo List?</h2>
     <div class="benefit-grid">
       <div class="benefit">✅ Simple & Fast</div>
@@ -58,6 +60,7 @@
 
   <!-- Demo -->
   <section id="demo" class="demo container">
+    <br><br>
     <h2>See It In Action</h2>
     <p>Your productivity dashboard, always within reach.</p>
     <img src="images/demo.svg" alt="Demo Screenshot">
